--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section class="intro">
         <div class="intro__content">
-            <h2 class="intro__title font-size_4xl">Чего мы там не видели?</h2>
+            <h2 class="intro__title font-size_5xl">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной
                 стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
                 густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на
@@ -141,13 +141,13 @@
 
     <section class="footer">
         <div class="footer__links">
-            <p class="footer__item">Карты</p>
-            <p class="footer__item">Погода</p>
-            <p class="footer__item">Расписание</p>
-            <p class="footer__item">Календарь</p>
-            <p class="footer__item">Путешествия</p>
+            <p class="footer__item font-size_xl">Карты</p>
+            <p class="footer__item font-size_xl">Погода</p>
+            <p class="footer__item font-size_xl">Расписание</p>
+            <p class="footer__item font-size_xl">Календарь</p>
+            <p class="footer__item font-size_xl">Путешествия</p>
         </div>
-        <p class="footer__item">© 2020. Алмаз</p>
+        <p class="footer__item font-size_xl">© 2020. Алмаз</p>
     </section>
 
 </body>
