--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
     </section>
 
     <section class="photo-grid">
-        <div class="photo__container">
-            <img class="photo" src="img/photo-grid-train.jpg" alt="">
-            <img class="photo" src="img/photo-grid-atharva-tulsi.jpg" alt="">
-            <img class="photo" src="img/photo-grid-tuman.jpg" alt="">
-            <img class="photo" src="img/photo-grid-sochi.jpg" alt="">
-            <img class="photo" src="img/photo-grid-arisa.jpg" alt="">
-            <img class="photo" src="img/photo-grid-baikal.jpg" alt="">
-            <img class="photo" src="img/photo-grid-elbrus.jpg" alt="">
-            <img class="photo" src="img/photo-grid-kondratiev.jpg" alt="">
-            <img class="photo" src="img/photo-grid-kamchatka-1.jpg" alt="">
-            <img class="photo" src="img/photo-grid-kamchatka-2.jpg" alt="">
-            <img class="photo" src="img/photo-grid-baikal-2.jpg" alt="">
-            <img class="photo" src="img/photo-grid-ergaki.jpg" alt="">
+        <div class="photo-grid__container">
+            <img class="photo-grid__photo" src="img/photo-grid-train.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-atharva-tulsi.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-tuman.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-sochi.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-arisa.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-baikal.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-elbrus.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-kondratiev.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-kamchatka-1.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-kamchatka-2.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-baikal-2.jpg" alt="">
+            <img class="photo-grid__photo" src="img/photo-grid-ergaki.jpg" alt="">
         </div>
     </section>
 
